[gd_scene load_steps=4 format=3 uid="uid://denyaphwcpceu"]

[ext_resource type="Script" path="res://GameDVDCardtridge/ManOfCoyote/ManOfCoyote.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dbqp1nh5l1jk4" path="res://GameDVDCardtridge/ManOfCoyote/PauseMenu.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dacs07wvhnoo0" path="res://GameDVDCardtridge/ManOfCoyote/Mostifilend.tscn" id="3"]

[node name="ManOfCoyote" type="Node"]
process_mode = 2
script = ExtResource("1")

[node name="Field" type="Node3D" parent="."]
process_mode = 1

[node name="Level" type="Node3D" parent="Field"]

[node name="Mostifilend" parent="Field/Level" instance=ExtResource("3")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 2

[node name="UIsoWe" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" parent="CanvasLayer/UIsoWe" instance=ExtResource("2")]

[connection signal="ChangeDVDNow" from="CanvasLayer/UIsoWe/PauseMenu" to="." method="_on_PauseMenu_ChangeDVDNow"]
[connection signal="OkButton" from="CanvasLayer/UIsoWe/PauseMenu" to="." method="_on_PauseMenu_OkButton"]
[connection signal="ShutdownNow" from="CanvasLayer/UIsoWe/PauseMenu" to="." method="_on_PauseMenu_ShutdownNow"]
